# Code-Reviewer

./: .gitignore  .pre-commit-config.yaml  eslint.config.cjs  package.json  pyproject.toml  requirements.txt  setup.py
my_code_validator/: cli.py
my_code_validator/commands/: dependencies.py  install_packages.py  uninstall_packages.py  validate_file.py  validate_project.py  version.py
my_code_validator/validators/: js_validator.py  python_validator.py  utils.py
workflows/: code-validate.yml
