[tool.poetry]
name = "frappe-code-validate"
version = "1.1.0"
description = "A Python package for automatic code validation with JS support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
radon = "^6.0.1"
bandit = "^1.7.5"
coverage = "^7.3.1"
vulture = "^2.3.0"
pylint = "^2.15"
pipreqs = "^0.4.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
